--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -1,4 +1,4 @@
-/* Hide the default Home link in the sidebar */
-.sidebar .nav-item:first-child {
-  display: none !important;
-}
+// /* Hide the default Home link in the sidebar */
+// .sidebar .nav-item:first-child {
+//   display: none !important;
+// }
