--- a/_layouts/research_cards.html
+++ b/_layouts/research_cards.html
@@ -34,54 +34,54 @@ layout: default
   {% for post in posts %}
     <article class="card-wrapper card">
       <a href="{{ post.url | relative_url }}" class="post-preview row g-0 flex-md-row-reverse">
+
         {% assign card_body_col = '12' %}
 
-       {% if post.image %}
-        {% assign src = post.image.path | default: post.image %}
-      
-        {% if post.media_subpath %}
-          {% unless src contains '://' %}
-            {% assign src = post.media_subpath
-              | append: '/'
-              | append: src
-              | replace: '///', '/'
-              | replace: '//', '/'
-            %}
-          {% endunless %}
-        {% endif %}
-      
-        {% if post.image.lqip %}
-          {% assign lqip = post.image.lqip %}
-      
+        {% if post.image %}
+          {% assign src = post.image.path | default: post.image %}
+
           {% if post.media_subpath %}
-            {% unless lqip contains 'data:' %}
-              {% assign lqip = post.media_subpath
+            {% unless src contains '://' %}
+              {% assign src = post.media_subpath
                 | append: '/'
-                | append: lqip
+                | append: src
                 | replace: '///', '/'
                 | replace: '//', '/'
               %}
             {% endunless %}
           {% endif %}
-      
-          {% assign lqip_attr = 'lqip="' | append: lqip | append: '"' %}
-        {% endif %}
-      
-        {% assign alt = post.image.alt | xml_escape | default: 'Preview Image' %}
-      
-        {%- comment -%}
-          posts.html 과 동일하게 preview-img 클래스를 붙여줘야
-          Chirpy의 카드/커버용 이미지 CSS가 적용됨
-        {%- endcomment -%}
-        {% capture img_class %}class="preview-img{% if post.image.no_bg %}{{ ' no-bg' }}{% endif %}"{% endcapture %}
-      
-        <div class="col-md-5">
-          <img src="{{ src }}" {{ img_class }} alt="{{ alt }}" w="1200" h="630" {{ lqip_attr }}>
-        </div>
-      
-        {% assign card_body_col = '7' %}
-      {% endif %}
 
+          {% if post.image.lqip %}
+            {% assign lqip = post.image.lqip %}
+
+            {% if post.media_subpath %}
+              {% unless lqip contains 'data:' %}
+                {% assign lqip = post.media_subpath
+                  | append: '/'
+                  | append: lqip
+                  | replace: '///', '/'
+                  | replace: '//', '/'
+                %}
+              {% endunless %}
+            {% endif %}
+
+            {% assign lqip_attr = 'lqip="' | append: lqip | append: '"' %}
+          {% endif %}
+
+          {% assign alt = post.image.alt | xml_escape | default: 'Preview Image' %}
+
+          {%- comment -%}
+            posts.html 과 동일하게 preview-img 클래스를 붙여서
+            Chirpy의 카드/커버용 이미지 CSS가 적용되도록 함
+          {%- endcomment -%}
+          {% capture img_class %}class="preview-img{% if post.image.no_bg %}{{ ' no-bg' }}{% endif %}"{% endcapture %}
+
+          <div class="col-md-5">
+            <img src="{{ src }}" {{ img_class }} alt="{{ alt }}" w="1200" h="630" {{ lqip_attr }}>
+          </div>
+
+          {% assign card_body_col = '7' %}
+        {% endif %}
 
         <div class="col-md-{{ card_body_col }}">
           <div class="card-body d-flex flex-column">
